--- a/configs/dataset/grab.yaml
+++ b/configs/dataset/grab.yaml
@@ -1,6 +1,6 @@
 name: "grab"
 root: "data/grab"
-obj_root: "data/grab/obj_meshes"
+obj_root: "data/grab/processed_object_meshes"
 data_obj_pc_path: "data/grab/obj.pkl"
 flat_hand: True
 max_nframes: 150
