--- a/configs/contact/contact.yaml
+++ b/configs/contact/contact.yaml
@@ -9,4 +9,5 @@ in_dim: 4
 test_iteration: 1
 iteration: 10000
 lr: 0.001
+save_root: data/networks/contact_estimator/${dataset.name}
 weight_path: checkpoints/${dataset.name}/${contact.model_name}.pth
